Fix chevron clipping in storyviewer

--- a/stylesheets/components/StoryViewer.scss
+++ b/stylesheets/components/StoryViewer.scss
@@ -145,7 +145,7 @@
       height: 20px;
       margin-left: 6px;
       vertical-align: middle;
-      width: 20px;
+      width: 12px;
       @include color-svg(
         '../images/icons/v2/chevron-right-20.svg',
         $color-white
